--- a/style/style.css
+++ b/style/style.css
@@ -3,6 +3,8 @@
     grid-template-rows: 120px 1700px 100px;
     font-family: sans-serif;
     font-size: 0.8em;
+    width: 1500px;
+    margin: 0 auto;
 }
 
 a{text-decoration: none;}
