--- a/style/style.css
+++ b/style/style.css
@@ -1,8 +1,8 @@
 .container{
     display: grid;
-    grid-template-rows: 120px 1700px 100px;
+    grid-template-rows: 120px auto 100px;
     font-family: sans-serif;
-    font-size: 0.8em;
+    font-size: 13px;
     min-width: 1000px;
     max-width: 1600px;
     margin: 0 auto;
@@ -105,7 +105,6 @@ section{
 .seconds{
     position: relative;
     top: 10px;
-   
     display: inline;
     height: 20px;
 }
@@ -234,7 +233,6 @@ footer{
     display: grid;
     grid-template-rows: repeat(2, auto);
     align-items: center;
-    
 }
 
 footer div{
@@ -247,4 +245,3 @@ footer div:last-of-type a{
     padding-right: 10px;
     
 }
-
